--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=admin
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+client.authorization-service.url=https://run.mocky.io/v3/b5cd8812-13bd-4828-9a5c-602f0def0b8b
+client.notification-service.url=https://run.mocky.io/v3/45f12370-3018-4305-b92e-fc6641037227
